@@ -1,3 +1,6 @@
+ Tue Dec 11 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.8-2
+  - restart client when free memory is less than 100M
+  - when release memory, the cached memory will also be released
  Tue Dec 7 2012 Zhang Huihui <huihuix.zhang@intel.com> 2.2.8-1
   - merge application.js into index.html
   - change execution sequence to core_auto, webapi, core_manual
